@@ -9,6 +9,7 @@ Change log 1.0 (under development)
 * MockGateway doMethodCall now also supports java proxy types.
 * Implemented the ability to set and get internal state based on field type. This means that you get refactor friendly code while still being able to set or get internal state.
 * Implemented the ability to set internal state based on an object type, i.e. you can now do setInternalState(object, myServiceImpl) to set the first field in object which can be assignable to myServiceImpl. This means that you get refactor friendly code while still being able to set internal state.
+* Get and setInternalState now separates between class and instance fields, i.e. you cannot set static fields by specifying an instance object.
 * Updated the tutorial projects to take advantage of the latest features in PowerMock.
 * Fixed a NPE bug in the AbstractTestClassExtractor.isPrepared(..) method.
 * The test class is no longer recommended as a PrepareForTest candidate if a NPE occurs inside the test class.
